--- a/examples/bpm/org.eclipse.viatra.examples.bpm.tests/build.properties
+++ b/examples/bpm/org.eclipse.viatra.examples.bpm.tests/build.properties
@@ -6,3 +6,4 @@ source.. = src/,\
            src-gen/,\
            xtend-gen/
 output.. = bin/
+jars.extra.classpath = platform:/fragment/com.google.inject.multibindings
