--- a/examples/bpm/org.eclipse.viatra.examples.bpm.parent/pom.xml
+++ b/examples/bpm/org.eclipse.viatra.examples.bpm.parent/pom.xml
@@ -4,13 +4,12 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.viatra.examples.bpm.parent</artifactId>
-	<name>EMF-IncQuery BPM Example</name>
-	<version>1.1.0-SNAPSHOT</version>
-	<url>http://eclipse.org/incquery</url>
+	<name>VIATRA BPM Example</name>
+	<url>http://eclipse.org/viatra</url>
 	<parent>
-		<artifactId>org.eclipse.incquery.parent</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
-		<groupId>org.eclipse.incquery</groupId>
+		<artifactId>org.eclipse.viatra.parent</artifactId>
+		<version>1.2.0-SNAPSHOT</version>
+		<groupId>org.eclipse.viatra</groupId>
 	</parent>
 	<packaging>pom</packaging>
 	<properties>
@@ -18,9 +17,9 @@
 		<sonar.surefire.reportsPath>../target/surefire-reports/</sonar.surefire.reportsPath>
 	</properties>
 	<modules>
-		<module>../org.eclipse.incquery.examples.bpm</module>
-		<module>../org.eclipse.incquery.examples.bpm.incquery</module>
-		<module>../org.eclipse.incquery.examples.bpm.tests</module>
+		<module>../org.eclipse.viatra.examples.bpm</module>
+		<module>../org.eclipse.viatra.examples.bpm.queries</module>
+		<module>../org.eclipse.viatra.examples.bpm.tests</module>
 	</modules>
 	<build>
 		<plugins>
@@ -32,10 +31,9 @@
 					<resolver>p2</resolver>
 					<target>
 						<artifact>
-							<groupId>org.eclipse.incquery</groupId>
-							<artifactId>org.eclipse.incquery.examples.bpm.test.parent</artifactId>
+							<groupId>org.eclipse.viatra</groupId>
+							<artifactId>org.eclipse.viatra.target.all</artifactId>
 							<version>${project.version}</version>
-							<classifier>bpmtest</classifier>
 						</artifact>
 					</target>
 					<ignoreTychoRepositories>true</ignoreTychoRepositories>
@@ -43,16 +41,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<scm>
-		<connection>scm:git:git://git.eclipse.org/gitroot/incquery/org.eclipse.incquery.examples.git</connection>
-    <url>http://git.eclipse.org/c/incquery/org.eclipse.incquery.examples.git/</url>
-	</scm>
-	<ciManagement>
-		<url>https://build.inf.mit.bme.hu/jenkins</url>
-		<system>Jenkins</system>
-	</ciManagement>
-	<issueManagement>
-		<url>https://bugs.eclipse.org/bugs/buglist.cgi?product=Incquery</url>
-    <system>Bugzilla</system>
-	</issueManagement>
 </project>
