--- a/examples/bpm/org.eclipse.viatra.examples.bpm.queries.validation/pom.xml
+++ b/examples/bpm/org.eclipse.viatra.examples.bpm.queries.validation/pom.xml
@@ -3,10 +3,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>org.eclipse.incquery.examples.bpm.test.parent</artifactId>
+    <artifactId>org.eclipse.viatra.examples.bpm.parent</artifactId>
     <groupId>org.eclipse.incquery</groupId>
-    <version>1.1.0-SNAPSHOT</version>
-    <relativePath>../org.eclipse.incquery.examples.bpm.test.parent/pom.xml</relativePath>
+    <version>1.2.0-SNAPSHOT</version>
+    <relativePath>../org.eclipse.viatra.examples.bpm.parent/pom.xml</relativePath>
   </parent>
   <artifactId>org.eclipse.incquery.examples.bpm.incquery.validation</artifactId>
   <packaging>eclipse-plugin</packaging>
