--- a/query/plugins/org.eclipse.viatra.query.tooling.generator.model.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.generator.model.ui/plugin.xml
@@ -9,7 +9,7 @@
               class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
               contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
               default="true"
-              extensions="eiqgen"
+              extensions="vqgen"
               icon="platform:/plugin/org.eclipse.viatra.query.tooling.ui/icons/logo2.png"
               id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel"
               name="GeneratorModel Editor">
@@ -34,7 +34,27 @@
                     definitionId="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.Editor.opened">
             </reference>
          </activeWhen>
-      </handler>
+      	</handler>
+      	<!-- copy qualified name -->
+        <handler
+            class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.copyqualifiedname.EditorCopyQualifiedNameHandler"
+            commandId="org.eclipse.xtext.ui.editor.copyqualifiedname.EditorCopyQualifiedName">
+            <activeWhen>
+				<reference definitionId="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.Editor.opened" />
+            </activeWhen>
+        </handler>
+        <handler
+            class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.copyqualifiedname.OutlineCopyQualifiedNameHandler"
+            commandId="org.eclipse.xtext.ui.editor.copyqualifiedname.OutlineCopyQualifiedName">
+            <activeWhen>
+            	<and>
+            		<reference definitionId="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.XtextEditor.opened" />
+	                <iterate>
+						<adapt type="org.eclipse.xtext.ui.editor.outline.IOutlineNode" />
+					</iterate>
+				</and>
+            </activeWhen>
+        </handler>
     </extension>
     <extension point="org.eclipse.core.expressions.definitions">
         <definition id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.Editor.opened">
@@ -47,6 +67,39 @@
                 </with>        
             </and>
         </definition>
+        <definition id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.XtextEditor.opened">
+            <and>
+                <reference definitionId="isXtextEditorActive"/>
+                <with variable="activeEditor">
+                    <test property="org.eclipse.xtext.ui.editor.XtextEditor.languageName" 
+                        value="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel" 
+                        forcePluginActivation="true"/>
+                </with>        
+            </and>
+        </definition>
+    </extension>
+    <extension
+            point="org.eclipse.ui.preferencePages">
+        <page
+            class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
+            id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel"
+            name="GeneratorModel">
+            <keywordReference id="org.eclipse.viatra.query.tooling.generator.model.ui.keyword_GeneratorModel"/>
+        </page>
+        <page
+            category="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel"
+            class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.syntaxcoloring.SyntaxColoringPreferencePage"
+            id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.coloring"
+            name="Syntax Coloring">
+            <keywordReference id="org.eclipse.viatra.query.tooling.generator.model.ui.keyword_GeneratorModel"/>
+        </page>
+        <page
+            category="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel"
+            class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.templates.XtextTemplatePreferencePage"
+            id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.templates"
+            name="Templates">
+            <keywordReference id="org.eclipse.viatra.query.tooling.generator.model.ui.keyword_GeneratorModel"/>
+        </page>
     </extension>
     <extension
             point="org.eclipse.ui.propertyPages">
@@ -74,6 +127,19 @@
             id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.validate"
             name="Validate">
       </command>
+      <!-- copy qualified name -->
+      <command
+            id="org.eclipse.xtext.ui.editor.copyqualifiedname.EditorCopyQualifiedName"
+            categoryId="org.eclipse.ui.category.edit"
+            description="Copy the qualified name for the selected element"
+            name="Copy Qualified Name">
+      </command>
+      <command
+            id="org.eclipse.xtext.ui.editor.copyqualifiedname.OutlineCopyQualifiedName"
+            categoryId="org.eclipse.ui.category.edit"
+            description="Copy the qualified name for the selected element"
+            name="Copy Qualified Name">
+      </command>
     </extension>
     <extension point="org.eclipse.ui.menus">
         <menuContribution
@@ -88,6 +154,36 @@
                 </reference>
             </visibleWhen>
          </command>  
+         </menuContribution>
+         <!-- copy qualified name -->
+         <menuContribution locationURI="popup:#TextEditorContext?after=copy">
+         	<command commandId="org.eclipse.xtext.ui.editor.copyqualifiedname.EditorCopyQualifiedName" 
+         		style="push" tooltip="Copy Qualified Name">
+            	<visibleWhen checkEnabled="false">
+                	<reference definitionId="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.Editor.opened" />
+            	</visibleWhen>
+         	</command>  
+         </menuContribution>
+         <menuContribution locationURI="menu:edit?after=copy">
+         	<command commandId="org.eclipse.xtext.ui.editor.copyqualifiedname.EditorCopyQualifiedName"
+            	style="push" tooltip="Copy Qualified Name">
+            	<visibleWhen checkEnabled="false">
+                	<reference definitionId="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.Editor.opened" />
+            	</visibleWhen>
+         	</command>  
+         </menuContribution>
+         <menuContribution locationURI="popup:org.eclipse.xtext.ui.outline?after=additions">
+			<command commandId="org.eclipse.xtext.ui.editor.copyqualifiedname.OutlineCopyQualifiedName" 
+				style="push" tooltip="Copy Qualified Name">
+         		<visibleWhen checkEnabled="false">
+	            	<and>
+	            		<reference definitionId="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.XtextEditor.opened" />
+						<iterate>
+							<adapt type="org.eclipse.xtext.ui.editor.outline.IOutlineNode" />
+						</iterate>
+					</and>
+				</visibleWhen>
+			</command>
          </menuContribution>
     </extension>
     <extension point="org.eclipse.ui.menus">
@@ -118,13 +214,13 @@
 		point="org.eclipse.emf.ecore.extension_parser">
 		<parser
 			class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
-			type="eiqgen">
+			type="vqgen">
 		</parser>
 	</extension>
 	<extension point="org.eclipse.xtext.extension_resourceServiceProvider">
         <resourceServiceProvider
             class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
-            uriExtension="eiqgen">
+            uriExtension="vqgen">
         </resourceServiceProvider>
     </extension>
 
@@ -216,7 +312,7 @@
    	<!-- Rename Refactoring -->
 	<extension point="org.eclipse.ui.handlers">
 		<handler 
-			class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.IRenameElementHandler"
+			class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.DefaultRenameElementHandler"
 			commandId="org.eclipse.xtext.ui.refactoring.RenameElement">
 			<activeWhen>
 				<reference
@@ -238,24 +334,39 @@
          </command>
       </menuContribution>
    </extension>
+   <extension point="org.eclipse.ui.preferencePages">
+	    <page
+	        category="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel"
+	        class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.RefactoringPreferencePage"
+	        id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.refactoring"
+	        name="Refactoring">
+	        <keywordReference id="org.eclipse.viatra.query.tooling.generator.model.ui.keyword_GeneratorModel"/>
+	    </page>
+	</extension>
 
   <extension point="org.eclipse.compare.contentViewers">
     <viewer id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.compare.contentViewers"
             class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
-            extensions="eiqgen">
+            extensions="vqgen">
     </viewer>
   </extension>
   <extension point="org.eclipse.compare.contentMergeViewers">
     <viewer id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.compare.contentMergeViewers"
             class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
-            extensions="eiqgen" label="GeneratorModel Compare">
+            extensions="vqgen" label="GeneratorModel Compare">
      </viewer>
   </extension>
   <extension point="org.eclipse.ui.editors.documentProviders">
     <provider id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel.editors.documentProviders"
             class="org.eclipse.viatra.query.tooling.generator.model.ui.GeneratorModelExecutableExtensionFactory:org.eclipse.xtext.ui.editor.model.XtextDocumentProvider"
-            extensions="eiqgen">
+            extensions="vqgen">
     </provider>
+  </extension>
+  <extension point="org.eclipse.team.core.fileTypes">
+    <fileTypes
+            extension="vqgen"
+            type="text">
+    </fileTypes>
   </extension>
 
 </plugin>
