--- a/query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui/plugin.xml
@@ -7,7 +7,7 @@
             category="org.eclipse.viatra.query.tooling.ui"
             class="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.views.LocalSearchDebugView"
             icon="icons/logo2.png"
-            id="org.eclipse.incquery.tooling.localsearch.ui.LocalSearchDebugView"
+            id="org.eclipse.viatra.query.tooling.localsearch.ui.LocalSearchDebugView"
             name="Local Search Debugger"
             restorable="true">
       </view>
@@ -17,19 +17,19 @@
    <extension
          point="org.eclipse.ui.commands">
       <command
-            id="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.start"
+            id="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.start"
             name="Start local search">
       </command>
       <command
-            id="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.step"
+            id="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.step"
             name="Step local search">
       </command>
       <command
-            id="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.run"
+            id="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.run"
             name="Run local search">
       </command>
       <command
-            id="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.placebreakpoint"
+            id="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.placebreakpoint"
             name="Place/remove breakpoint">
       </command>
    </extension>
@@ -37,46 +37,46 @@
          point="org.eclipse.ui.handlers">
       <handler
             class="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.handlers.StartLocalSearchHandler"
-            commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.start">
+            commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.start">
       </handler>
       <handler
             class="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.handlers.StepLocalSearchHandler"
-            commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.step">
+            commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.step">
       </handler>      
       <handler
             class="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.handlers.RunLocalSearchHandler"
-            commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.run">
+            commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.run">
       </handler>
       <handler
             class="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.handlers.CreateBreakPointHandler"
-            commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.placebreakpoint">
+            commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.placebreakpoint">
       </handler>
  </extension>
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
             allPopups="false"
-            locationURI="toolbar:org.eclipse.incquery.tooling.localsearch.ui.LocalSearchDebugView">
+            locationURI="toolbar:org.eclipse.viatra.query.tooling.localsearch.ui.LocalSearchDebugView">
          <command
-               commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.start"
+               commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.start"
                icon="icons/lrun_obj.gif"
                label="Start local search"
                style="push">
          </command>
          <command
-               commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.run"
+               commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.run"
                icon="icons/resume_co.gif"
                label="Run local search"
                style="push">
          </command>
          <command
-               commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.step"
+               commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.step"
                icon="icons/stepinto_co.gif"
                label="Step local search"
                style="push">
          </command>
          <command
-               commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.placebreakpoint"
+               commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.placebreakpoint"
                icon="icons/debug_exc.gif"
                label="Place/remove breakpoint"
                style="push">
@@ -86,17 +86,17 @@
    <extension
          point="org.eclipse.ui.bindings">
       <key
-            commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.step"
+            commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.step"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="F7">
       </key>
       <key
-            commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.start"
+            commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.start"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="F9">
       </key>
       <key
-            commandId="org.eclipse.incquery.tooling.localsearch.ui.debugger.localsearch.run"
+            commandId="org.eclipse.viatra.query.tooling.localsearch.ui.debugger.localsearch.run"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="F8">
       </key>
