--- a/maven/viatra-maven-plugin/pom.xml
+++ b/maven/viatra-maven-plugin/pom.xml
@@ -58,6 +58,12 @@
 			<groupId>org.eclipse.xtext</groupId>
 			<artifactId>xtext-maven-plugin</artifactId>
 			<version>${xtend.compiler.version}</version>
+			<exclusions>
+			 <exclusion>
+			   <groupId>com.google.guava</groupId>
+			   <artifactId>guava</artifactId>
+			 </exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	<repositories>
