[releng] Added composite site generation

--- a/releng/org.eclipse.viatra.update/pom.xml
+++ b/releng/org.eclipse.viatra.update/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!ENTITY antrunner SYSTEM "ant-runner.xml">
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
@@ -41,7 +40,61 @@
                     <value>integration</value>
                 </property>
             </activation>
-        &antrunner;
+                    <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho.extras</groupId>
+                        <artifactId>tycho-eclipserun-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <!-- IMPORTANT: do not split the appArgLine -->
+                            <appArgLine>-application org.eclipse.ant.core.antRunner -buildfile ${project.basedir}/packaging-p2composite.ant p2.composite.add -Dsoftware.download.area=${viatra.download.area} -Dupdates.dir=${viatra.updates.dir} -Dsite.label="VIATRA" -Dproject.build.directory=${project.build.directory} -DunqualifiedVersion=${unqualifiedVersion} -DbuildQualifier=${buildQualifier} -Dbuild.type=${BUILD_TYPE}</appArgLine>
+                            <repositories>
+                                <repository>
+                                    <id>luna</id>
+                                    <layout>p2</layout>
+                                    <url>http://download.eclipse.org/releases/luna</url>
+                                </repository>
+                            </repositories>
+                            <dependencies>
+                                <dependency>
+                                    <artifactId>org.eclipse.ant.core</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.apache.ant</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.repository.tools</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
+                                    <type>eclipse-feature</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.extras.feature</artifactId>
+                                    <type>eclipse-feature</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.ds</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                            </dependencies>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>add-p2-composite-repository</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>eclipse-run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>build-milestone-composite</id>
@@ -52,7 +105,61 @@
                     <value>milestone</value>
                 </property>
             </activation>
-        &antrunner;
+                    <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho.extras</groupId>
+                        <artifactId>tycho-eclipserun-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <!-- IMPORTANT: do not split the appArgLine -->
+                            <appArgLine>-application org.eclipse.ant.core.antRunner -buildfile ${project.basedir}/packaging-p2composite.ant p2.composite.add -Dsoftware.download.area=${viatra.download.area} -Dupdates.dir=${viatra.updates.dir} -Dsite.label="VIATRA" -Dproject.build.directory=${project.build.directory} -DunqualifiedVersion=${unqualifiedVersion} -DbuildQualifier=${buildQualifier} -Dbuild.type=${BUILD_TYPE}</appArgLine>
+                            <repositories>
+                                <repository>
+                                    <id>luna</id>
+                                    <layout>p2</layout>
+                                    <url>http://download.eclipse.org/releases/luna</url>
+                                </repository>
+                            </repositories>
+                            <dependencies>
+                                <dependency>
+                                    <artifactId>org.eclipse.ant.core</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.apache.ant</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.repository.tools</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
+                                    <type>eclipse-feature</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.extras.feature</artifactId>
+                                    <type>eclipse-feature</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.ds</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                            </dependencies>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>add-p2-composite-repository</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>eclipse-run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>build-release-composite</id>
@@ -63,7 +170,61 @@
                     <value>release</value>
                 </property>
             </activation>
-        &antrunner;
+                    <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho.extras</groupId>
+                        <artifactId>tycho-eclipserun-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <!-- IMPORTANT: do not split the appArgLine -->
+                            <appArgLine>-application org.eclipse.ant.core.antRunner -buildfile ${project.basedir}/packaging-p2composite.ant p2.composite.add -Dsoftware.download.area=${viatra.download.area} -Dupdates.dir=${viatra.updates.dir} -Dsite.label="VIATRA" -Dproject.build.directory=${project.build.directory} -DunqualifiedVersion=${unqualifiedVersion} -DbuildQualifier=${buildQualifier} -Dbuild.type=${BUILD_TYPE}</appArgLine>
+                            <repositories>
+                                <repository>
+                                    <id>luna</id>
+                                    <layout>p2</layout>
+                                    <url>http://download.eclipse.org/releases/luna</url>
+                                </repository>
+                            </repositories>
+                            <dependencies>
+                                <dependency>
+                                    <artifactId>org.eclipse.ant.core</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.apache.ant</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.repository.tools</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
+                                    <type>eclipse-feature</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.p2.extras.feature</artifactId>
+                                    <type>eclipse-feature</type>
+                                </dependency>
+                                <dependency>
+                                    <artifactId>org.eclipse.equinox.ds</artifactId>
+                                    <type>eclipse-plugin</type>
+                                </dependency>
+                            </dependencies>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>add-p2-composite-repository</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>eclipse-run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
