[458336] Added API baseline generation to the Oomph setup
Change-Id: I0f847f7f1517276490b8c2825aaeffaa769beef4

[458336] Added an rcp product of the 1.2.0 features and ant scripts

Change-Id: I248145f10dc495027adbf82e48688f014bc0b3d7

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -9,8 +9,11 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>../../releng/org.eclipse.viatra.target.all</module>
+		<module>../../releng/org.eclipse.viatra.target.rcp</module>
 		<module>../../releng/org.eclipse.viatra.update</module>
 		<module>../../releng/org.eclipse.viatra.docs</module>
+		<module>../../releng/org.eclipse.viatra.rcpproduct</module>
+		
 
 		<!-- Query -->
 		<module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.ui</module>
